codegen/ui_tests/rhai_mod_path_attr.stderr
error: expecting attribute name
  --> ui_tests/rhai_mod_path_attr.rs:11:12
   |
11 | #[rhai_mod(rhai::name = "thing")]
   |            ^^^^
